updating additonal changes using bootstrap

--- a/memory_game/index.html
+++ b/memory_game/index.html
@@ -14,8 +14,8 @@ rel="stylesheet">
 <div class="pos-f-t">
     <div class="collapse" id="navbarToggleExternalContent">
       <div class="bg-dark p-4">
-        <h4 class="text-gray">Instructions</h4>
-        <h4 class="text-gray">Game</h4>
+        <h4 class="text-white">Instructions</h4>
+        <h4 class="text-white">Game</h4>
       </div>
     </div>
     <nav class="navbar navbar-dark bg-dark">
@@ -26,7 +26,7 @@ rel="stylesheet">
   </div>
 <main>
   <h3>Instructions</h3>
-  <p>
+  <p class ="font-italic">
     Concentration, also known as Match Match, Memory, Pelmanism,
     Shinkei-suijaku, Pexeso or simply Pairs, is a card game in
     which all of thecards are laid face down on a surface and two cards
