--- a/memory_game/index.html
+++ b/memory_game/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Memory Card Game</title>
+<title class>Memory Card Game</title>
 <link href="style.css" rel="stylesheet" type="text/css">
 <link href="https://fonts.googleapis.com/css?family=Droid+Serif|Raleway:400,500,600,700"
 rel="stylesheet">
@@ -25,7 +25,7 @@ rel="stylesheet">
     </nav>
   </div>
 <main>
-  <h3>Instructions</h3>
+  <h3 style = "text-align: center">Instructions</h3>
   <p class ="font-italic">
     Concentration, also known as Match Match, Memory, Pelmanism,
     Shinkei-suijaku, Pexeso or simply Pairs, is a card game in
